feat: 修复打包问题