@@ -54,12 +54,12 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>tools-web</module>
+        <module>rocketmq-spring-boot</module>
         <module>tools-base</module>
         <module>tools-data</module>
-        <module>tools-factory</module>
         <module>tools-service</module>
-        <module>rocketmq-spring-boot</module>
+        <module>tools-factory</module>
+        <module>tools-web</module>
     </modules>
 
     <dependencyManagement>
@@ -100,8 +100,24 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>    <!--默认关掉单元测试 -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
